# pyportion

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST.TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_change.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: bug.yml  documentation.yml  feature.yml
.github/workflows/: bump_minor_version.yml  bump_patch_version.yml  bump_version.yml  publish_docs.yml  publish_to_pypi.yml  python-publish.yml  run_flake8.yml  run_isort.yml  run_mypy.yml  run_pytest.yml  test.yml
assets/css/: custom.css  landing-page.css  termynal.css
assets/js/: custom.js
docs/: CNAME  demo.html  index.html  index.md
docs/assets/css/: custom.css  index.css  landing-page.css
docs/assets/js/: demo-terminal.js  hero-text-animation.js  terminal-animation.js  termynal.js
docs/pages/: contributing.md  get-started.md  getting-started.md  index.md  user-guide.md
docs/pages/user-guide/: 1-introduction.md  2-get-started.md  get-started.md
pages/: index.html
pages/contributing/: index.html
pages/get-started/: index.html
pages/user-guide/1-introduction/: index.html
pages/user-guide/2-get-started/: index.html
pages/user-guide/get-started/: index.html
pages/user-guide/introduction/: index.html
portion/: __main__.py  portion.py
portion/base/: __init__.py  action.py  command.py  handler.py
portion/commands/: __init__.py  add.py  build.py  create.py  info.py  init.py  install.py  manage.py  new.py  remove.py  template.py  version.py
portion/controller/: __init__.py  new.py  template.py
portion/core/: __init__.py  config.py  logger.py  message.py  parser.py  parsers.py  project_manager.py  template_manager.py
portion/handler/: __init__.py  add.py  build.py  info.py  init.py  install.py  manage.py  new.py  remove.py  template.py  version.py
portion/models/: __init__.py  config.py  message.py  project.py  state.py  template.py
portion/step_actions/: __init__.py  ask.py  copy.py  replace.py
portion/utils/: __init__.py  resolver.py  transformer.py
search/: search_index.json
tests/: conftest.py  test_commands.py  test_logger.py  test_portion.py  test_project_manager.py  test_resolver.py  test_template_manager.py  test_transform.py
tests/commands/: test_add.py  test_build.py  test_info.py  test_init.py  test_install.py  test_new.py  test_remove.py  test_template.py  test_version.py
tests/step_actions/: test_action_creation.py  test_ask.py  test_copy.py  test_replace.py
tests/utils/: __init__.py  ansi.py  template_fixtures.py
