[project]
name = "pyportion"
version = "0.0.6"
description = "A Python CLI tool that helps developers kickstart new projects and manage existing ones"
authors = [
    {name = "Murtada",email = "murtada.altarouti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython (==3.1.45)",
    "platformdirs (==4.4.0)",
    "tabulate (==0.9.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "types-tabulate (>=0.9.0.20241207,<0.10.0.0)"
]

[tool.poetry]
packages = [
    { include = "portion" }
]

[tool.poetry.scripts]
portion = "portion.__main__:main"
