[project]
name = "pyportion"
version = "0.1.0"
description = "A Python CLI tool that helps developers kickstart new projects and manage existing ones"
authors = [
    {name = "Murtada Altarouti",email = "murtada.altarouti@gmail.com"},
    {name = "Mohammed Alismail ",email = "mhs.m.000@gmail.com"}
]
license-files = ["LICENSE"]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython (==3.1.45)",
    "platformdirs (==4.4.0)",
    "tabulate (==0.9.0)",
    "typer (>=0.20.0,<0.21.0)",
    "ruamel-yaml (>=0.18.16,<0.19.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-bugbear (>=24.12.12,<25.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "types-tabulate (>=0.9.0.20241207,<0.10.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "portion" }
]

[poetry.scripts]
portion = "portion.__main__:main"
