[metadata]
name = pyportion
version = 0.0.5
author = Murtada Altarouti
author_email = murtada.altarouti@gmail.com
url = https://github.com/pyportion/pyportion
description = Python CLI to manage your projects
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
project_urls =
    Bug Tracker = https://github.com/pyportion/pyportion/issues

[options]
packages = find:
python_requires = >=3.8
install_requires =
    gitpython==3.1.45
    platformdirs==4.4.0
    tabulate==0.9.0

[options.entry_points]
console_scripts =
    portion = portion.__main__:main
